# Homework_API_Contacts

./: .coverage  .gitignore  config.py  docker-compose.yml  main.py  pyproject.toml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 7f595625d861_new_user_fields.py  a7d75acdd9a3_init.py  cb3bb8d06e55_create_contacts_and_users_tables.py  e6296e12d3bd_add_users.py
postgres-data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16399  16402  16404  16411  16413  16415  16416  16422  16424  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  (+1 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
postgres-data/pg_xact/: 0000
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: schemas.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html  passwor_update_template.html  reset_template.html
tests/: conftest.py  test_route_auth.py  test_route_contacts.py  test_route_users.py  test_unit_repository_contacts.py  test_unit_repository_users.py
