[tool.poetry]
name = "api-contacts"
version = "0.1.0"
description = "API for saving contact information"
authors = ["Olesia0402 <olesyashevchuk0402@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
